--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <div id="switch" onclick="toggleMode()">
-        <button></button>
+        <button title="teste"></button>
         <span></span>
       </div>
       <ul>
