deletei alguns arquivos no assets e modifiquei erros no index.html , readme.md , etc

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       </div>
       <ul>
         <li><a href="#">Español do jeito certo</a></li>
-        <li><a href="#">link superprofbr </a></li>
-        <li><a href="#">pdf das aulas </a></li>
-        <li><a href="#">youtube </a></li>
+        <li><a href="https://www.superprof.com.br/aprende-espanol-click-espanol-descomplicado-facil-para-todos-los-niveles.html">link superprofbr </a></li>
+        <li><a href="">pdf das aulas </a></li>
+        <li><a href="#"></a></li>
       </ul>
       <div id="social-links">
         <a href="https://www.linkedin.com/in/vivianrcc/" target="_blank">
